deployments/pathweb/workloads/home-network/slzb-ultima-wg/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slzb-ultima-wg
  namespace: home-network
  annotations:
    kustomize.toolkit.fluxcd.io/force: enabled
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: slzb-ultima-wg
  template:
    metadata:
      labels:
        app.kubernetes.io/name: slzb-ultima-wg
      annotations:
        k8s.v1.cni.cncf.io/networks: '[{"name":"slzb-ultima-wg-iot-network"}]'
    spec:
      priorityClassName: rfhome-home-critical
      nodeSelector:
        kubernetes.io/os: linux
        location: rfhome
      automountServiceAccountToken: false
      # hostUsers: false
      securityContext:
        fsGroup: 1000
        # seccompProfile:
        #   type: RuntimeDefault
      containers:
      - name: wireproxy
        image: ghcr.io/windtf/wireproxy:latest
        args: ["--config", "/etc/wireproxy/wireproxy.conf"]
        # securityContext:
        #   allowPrivilegeEscalation: false
        #   readOnlyRootFilesystem: true
        #   capabilities:
        #     drop:
        #     - ALL
        #     add:
        #     - NET_BIND_SERVICE
        ports:
        - containerPort: 6638
          name: radio1
          protocol: TCP
        - containerPort: 7638
          name: radio2
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - name: wireguard-config
          mountPath: /etc/wireproxy
          readOnly: true
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        livenessProbe:
          tcpSocket:
            port: 6638
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 6638
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: wireguard-config
        secret:
          secretName: slzb-ultima-wg-secrets
